enclave/cdk.out/devNitromy-app.template.json
{
 "Resources": {
  "EncryptionKey1B843E66": {
   "Type": "AWS::KMS::Key",
   "Properties": {
    "EnableKeyRotation": true,
    "KeyPolicy": {
     "Statement": [
      {
       "Action": "kms:*",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::043673801220:root"
          ]
         ]
        }
       },
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "Secretsigningkey3D6A96BB": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/signing_key/Ciphertext",
    "Type": "String",
    "Value": "UNSET"
   }
  },
  "Migrationsigningkey22C324FA": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/Migration/signing_key/Ciphertext",
    "Type": "String",
    "Value": "UNSET"
   }
  },
  "MigrationKMSKeyID387A0AA4": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/MigrationKMSKeyID",
    "Type": "String",
    "Value": "UNSET"
   }
  },
  "MigrationPreviousPCR0A7A2BABC": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/MigrationPreviousPCR0",
    "Type": "String",
    "Value": "UNSET"
   }
  },
  "MigrationPreviousPCR0Attestation72B79727": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/MigrationPreviousPCR0Attestation",
    "Tier": "Advanced",
    "Type": "String",
    "Value": "UNSET"
   }
  },
  "MigrationOldKMSKeyIDA6D9FAF9": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/MigrationOldKMSKeyID",
    "Type": "String",
    "Value": "UNSET"
   }
  },
  "VPCB9E5F0B4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC"
     }
    ]
   }
  },
  "VPCpublicSubnet1Subnet325F50B2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCpublicSubnet1RouteTableF591E248": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCpublicSubnet1RouteTableAssociationBFFA43B7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet1RouteTableF591E248"
    },
    "SubnetId": {
     "Ref": "VPCpublicSubnet1Subnet325F50B2"
    }
   }
  },
  "VPCpublicSubnet1DefaultRoute19059ECD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCpublicSubnet1RouteTableF591E248"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ]
  },
  "VPCpublicSubnet1EIP2D50A06D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/publicSubnet1"
     }
    ]
   }
  },
  "VPCpublicSubnet1NATGatewayEEDEB5A1": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VPCpublicSubnet1EIP2D50A06D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VPCpublicSubnet1Subnet325F50B2"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VPCpublicSubnet1DefaultRoute19059ECD",
    "VPCpublicSubnet1RouteTableAssociationBFFA43B7"
   ]
  },
  "VPCpublicSubnet2Subnet2B2DFF71": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCpublicSubnet2RouteTable55DAB1BB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCpublicSubnet2RouteTableAssociation0849466B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCpublicSubnet2RouteTable55DAB1BB"
    },
    "SubnetId": {
     "Ref": "VPCpublicSubnet2Subnet2B2DFF71"
    }
   }
  },
  "VPCpublicSubnet2DefaultRoute9ED4D6BC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCpublicSubnet2RouteTable55DAB1BB"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ]
  },
  "VPCprivateSubnet1SubnetE522290D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCprivateSubnet1RouteTable41566AF9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCprivateSubnet1RouteTableAssociation43FE0C59": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCprivateSubnet1RouteTable41566AF9"
    },
    "SubnetId": {
     "Ref": "VPCprivateSubnet1SubnetE522290D"
    }
   }
  },
  "VPCprivateSubnet1DefaultRoute68B79172": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCpublicSubnet1NATGatewayEEDEB5A1"
    },
    "RouteTableId": {
     "Ref": "VPCprivateSubnet1RouteTable41566AF9"
    }
   }
  },
  "VPCprivateSubnet2Subnet2F4D9530": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCprivateSubnet2RouteTableBBE8BB2B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "VPCprivateSubnet2RouteTableAssociation45BBC356": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCprivateSubnet2RouteTableBBE8BB2B"
    },
    "SubnetId": {
     "Ref": "VPCprivateSubnet2Subnet2F4D9530"
    }
   }
  },
  "VPCprivateSubnet2DefaultRouteD808B206": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCpublicSubnet1NATGatewayEEDEB5A1"
    },
    "RouteTableId": {
     "Ref": "VPCprivateSubnet2RouteTableBBE8BB2B"
    }
   }
  },
  "VPCIGWB7E252D3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/VPC"
     }
    ]
   }
  },
  "VPCVPCGW99B986DC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "KMSEndpointSecurityGroup3C14701E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "devNitromy-app/KMSEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "VPCB9E5F0B4",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "VPCB9E5F0B4",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "KMSEndpoint25A5F270": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "KMSEndpointSecurityGroup3C14701E",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.kms",
    "SubnetIds": [
     {
      "Ref": "VPCprivateSubnet1SubnetE522290D"
     },
     {
      "Ref": "VPCprivateSubnet2Subnet2F4D9530"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "SSMEndpointSecurityGroup3A3F1835": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "devNitromy-app/SSMEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "VPCB9E5F0B4",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "VPCB9E5F0B4",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "SSMEndpointE3B50236": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "SSMEndpointSecurityGroup3A3F1835",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.ssm",
    "SubnetIds": [
     {
      "Ref": "VPCprivateSubnet1SubnetE522290D"
     },
     {
      "Ref": "VPCprivateSubnet2Subnet2F4D9530"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "ECREndpointSecurityGroup68E91E62": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "devNitromy-app/ECREndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "VPCB9E5F0B4",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "VPCB9E5F0B4",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "ECREndpoint0B0E50C8": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ECREndpointSecurityGroup68E91E62",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.ecr.api",
    "SubnetIds": [
     {
      "Ref": "VPCprivateSubnet1SubnetE522290D"
     },
     {
      "Ref": "VPCprivateSubnet2Subnet2F4D9530"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "NitroInstanceSG51966EFB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Private SG for Nitro Enclave EC2 instance",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTPS from internet",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   }
  },
  "SelfTCP443": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "FromPort": 443,
    "GroupId": {
     "Fn::GetAtt": [
      "NitroInstanceSG51966EFB",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "NitroInstanceSG51966EFB",
      "GroupId"
     ]
    },
    "ToPort": 443
   }
  },
  "SelfICMP": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "FromPort": -1,
    "GroupId": {
     "Fn::GetAtt": [
      "NitroInstanceSG51966EFB",
      "GroupId"
     ]
    },
    "IpProtocol": "icmp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "NitroInstanceSG51966EFB",
      "GroupId"
     ]
    },
    "ToPort": -1
   }
  },
  "InstanceSSMCBFA3CF0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonSSMManagedInstanceCore"
       ]
      ]
     }
    ]
   }
  },
  "InstanceSSMDefaultPolicy6E4EFE93": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "s3:GetObject*",
        "s3:GetBucket*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":s3:::cdk-hnb659fds-assets-043673801220-us-east-1"
          ]
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":s3:::cdk-hnb659fds-assets-043673801220-us-east-1/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "Secretsigningkey3D6A96BB"
          }
         ]
        ]
       }
      },
      {
       "Action": "ssm:PutParameter",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "Secretsigningkey3D6A96BB"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "Migrationsigningkey22C324FA"
          }
         ]
        ]
       }
      },
      {
       "Action": "ssm:PutParameter",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "Migrationsigningkey22C324FA"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationKMSKeyID387A0AA4"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationPreviousPCR0A7A2BABC"
          }
         ]
        ]
       }
      },
      {
       "Action": "ssm:PutParameter",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationPreviousPCR0A7A2BABC"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationPreviousPCR0Attestation72B79727"
          }
         ]
        ]
       }
      },
      {
       "Action": "ssm:PutParameter",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationPreviousPCR0Attestation72B79727"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationOldKMSKeyIDA6D9FAF9"
          }
         ]
        ]
       }
      },
      {
       "Action": "ssm:PutParameter",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "MigrationOldKMSKeyIDA6D9FAF9"
          }
         ]
        ]
       }
      },
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:us-east-1:043673801220:repository/cdk-hnb659fds-container-assets-043673801220-us-east-1"
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "kms:Decrypt",
        "kms:Encrypt",
        "kms:ReEncrypt*",
        "kms:GenerateDataKey*"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "EncryptionKey1B843E66",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "ssm:DescribeParameters",
        "ssm:GetParameters",
        "ssm:GetParameter",
        "ssm:GetParameterHistory"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ssm:us-east-1:043673801220:parameter",
          {
           "Ref": "KMSKeyID6CC84007"
          }
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "InstanceSSMDefaultPolicy6E4EFE93",
    "Roles": [
     {
      "Ref": "InstanceSSMCBFA3CF0"
     }
    ]
   }
  },
  "NitroInstanceInstanceProfileBCA9906C": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "InstanceSSMCBFA3CF0"
     }
    ]
   }
  },
  "NitroInstance979691AE": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "VolumeSize": 32,
       "VolumeType": "gp2"
      }
     }
    ],
    "EnclaveOptions": {
     "Enabled": true
    },
    "IamInstanceProfile": {
     "Ref": "NitroInstanceInstanceProfileBCA9906C"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "m6i.xlarge",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "NitroInstanceSG51966EFB",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "VPCpublicSubnet1Subnet325F50B2"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "devNitromy-app/NitroInstance"
     }
    ],
    "UserData": {
     "Fn::Base64": {
      "Fn::Sub": [
       "Content-Type: multipart/mixed; boundary=\"//\"\nMIME-Version: 1.0\n\n--//\nContent-Type: text/cloud-config; charset=\"us-ascii\"\nMIME-Version: 1.0\nContent-Transfer-Encoding: 7bit\nContent-Disposition: attachment; filename=\"cloud-config.txt\"\n\n#cloud-config\nbootcmd:\n  - [ dnf, install, aws-nitro-enclaves-cli, aws-nitro-enclaves-cli-devel, htop, git, jq, unzip, -y ]\n\n--//\nContent-Type: text/x-shellscript; charset=\"us-ascii\"\nMIME-Version: 1.0\nContent-Transfer-Encoding: 7bit\nC [...]
       {
        "__APP_NAME__": "my-app",
        "__DEV_MODE__": "dev",
        "__EIF_S3_URL__": "s3://cdk-hnb659fds-assets-043673801220-us-east-1/abb6632d210acef0b651d709e38962af63cc37b00aaded9c044753ab425b324a.eif",
        "__ENCLAVE_INIT_S3_URL__": "s3://cdk-hnb659fds-assets-043673801220-us-east-1/22b58c667387e8f1ea6cbcca6bd8f4bb1444292e57bf99756a3783cd93bc3212.sh",
        "__ENCLAVE_INIT_SYSTEMD_S3_URL__": "s3://cdk-hnb659fds-assets-043673801220-us-east-1/8b87b2e8d316c42671b9036a874737da4895294a93d285b6e45292e6b5af1580.service",
        "__GVPROXY_IMAGE_URI__": {
         "Fn::Sub": "043673801220.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-043673801220-us-east-1:f12ee69e332908cd5371e48b3a6badb4fa421044c02b0df47ef43461ad80fca0"
        },
        "__GVPROXY_SYSTEMD_S3_URL__": "s3://cdk-hnb659fds-assets-043673801220-us-east-1/6a4b9fd0d434a61da899c03e880b1ea94ee94e777f6149f6468d3a13cfcd0b1a.service",
        "__IMDS_SYSTEMD_S3_URL__": "s3://cdk-hnb659fds-assets-043673801220-us-east-1/76951b19f5e457b24a589f0fd42a0f3a048458e086b750fea4bb48b2d684a6a5.service",
        "__KMS_KEY_ID__": {
         "Ref": "EncryptionKey1B843E66"
        },
        "__REGION__": "us-east-1"
       }
      ]
     }
    }
   },
   "DependsOn": [
    "InstanceSSMDefaultPolicy6E4EFE93",
    "InstanceSSMCBFA3CF0"
   ]
  },
  "EnclaveEIP": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc"
   }
  },
  "EnclaveEIPAssoc": {
   "Type": "AWS::EC2::EIPAssociation",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EnclaveEIP",
      "AllocationId"
     ]
    },
    "InstanceId": {
     "Ref": "NitroInstance979691AE"
    }
   }
  },
  "KMSKeyID6CC84007": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/dev/my-app/KMSKeyID",
    "Type": "String",
    "Value": {
     "Ref": "EncryptionKey1B843E66"
    }
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "EC2InstanceRoleARN": {
   "Description": "EC2 Instance Role ARN",
   "Value": {
    "Fn::GetAtt": [
     "InstanceSSMCBFA3CF0",
     "Arn"
    ]
   }
  },
  "KMSKeyID": {
   "Description": "KMS Key ID",
   "Value": {
    "Ref": "EncryptionKey1B843E66"
   }
  },
  "InstanceID": {
   "Description": "EC2 Instance ID",
   "Value": {
    "Ref": "NitroInstance979691AE"
   }
  },
  "ElasticIP": {
   "Description": "Static public IP for the enclave instance",
   "Value": {
    "Ref": "EnclaveEIP"
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
